--- a/docs/node/docs/pages/advanced/performance-profiler.mdx
+++ b/docs/node/docs/pages/advanced/performance-profiler.mdx
@@ -3,224 +3,521 @@ title: Performance & Profiler
 description: How to measure EVM performance with Tevm Node
 ---
 
+import { Callout, Steps, Tabs, Tab, Card, Cards, Button, FileTree } from 'vocs/components'
+
 # Performance & Profiler
 
-Tevm Node includes a built-in performance profiler that helps you analyze EVM execution, identify bottlenecks, and optimize your smart contracts.
+<Callout type="info" title="Performance Analysis">
+  Tevm Node includes a powerful built-in profiler that helps you analyze EVM execution, identify bottlenecks, and optimize your smart contracts.
+</Callout>
 
-## Enabling the Profiler
+The performance profiler tracks execution time, gas usage, and other metrics for every operation in the EVM, giving you deep insights into how your contracts perform.
 
-Enable profiling when creating your node:
+## Quick Start
 
-```ts
-import { createTevmNode } from 'tevm'
+<Tabs>
+  <Tab label="Basic Setup">
+    ```typescript showLineNumbers {1,3-8,11,14,17,20} filename="basic-profiling.ts"
+    import { createTevmNode } from 'tevm'
+    
+    const node = createTevmNode({ // [!code focus]
+      profiler: { // [!code focus]
+        enabled: true, // [!code focus]
+        includeOpcodes: true, // Track individual opcodes // [!code focus]
+        includePrecompiles: true, // Track precompiled contracts // [!code focus]
+      } // [!code focus]
+    })
+    
+    // Execute some transactions or function calls
+    const vm = await node.getVm() // [!code focus]
+    
+    // Run your contract operations
+    await vm.runTx({ /* transaction details */ }) // [!code focus]
+    
+    // Get performance logs
+    const logs = vm.evm.getPerformanceLogs() // [!code focus]
+    
+    // Clear logs when done
+    vm.evm.clearPerformanceLogs() // [!code focus]
+    ```
+  </Tab>
+  
+  <Tab label="Complete Example">
+    ```typescript showLineNumbers {3-12,15-19,22-35} filename="contract-profiling.ts"
+    import { createTevmNode } from 'tevm'
+    
+    // Create a node with profiling enabled
+    const node = createTevmNode({ // [!code focus]
+      profiler: { // [!code focus]
+        enabled: true, // [!code focus]
+        includeOpcodes: true, // [!code focus]
+        includePrecompiles: true, // [!code focus]
+        includeMemory: true, // Include memory operations // [!code focus]
+        includeStorage: true, // Include storage operations // [!code focus]
+        callStackDepth: 10, // Maximum call stack depth to track // [!code focus]
+      } // [!code focus]
+    })
+    
+    // Set up the contract
+    const vm = await node.getVm() // [!code focus]
+    const deployTx = createTx({ /* deployment transaction */ }) // [!code focus]
+    await vm.runTx({ tx: deployTx }) // [!code focus]
+    const contractAddress = deployTx.createdAddress // [!code focus]
+    
+    // Profile a specific function call
+    // Clear previous logs first
+    vm.evm.clearPerformanceLogs() // [!code focus]
+    
+    // Call the contract function
+    const callTx = createTx({ // [!code focus]
+      to: contractAddress, // [!code focus]
+      data: '0xa9059cbb000000000000000000000000123...', // function selector + params // [!code focus]
+    }) // [!code focus]
+    await vm.runTx({ tx: callTx }) // [!code focus]
+    
+    // Analyze the performance
+    const logs = vm.evm.getPerformanceLogs() // [!code focus]
+    const analysis = analyzePerformance(logs) // [!code focus]
+    
+    console.log(`Total execution time: ${analysis.totalTime}ms`) // [!code focus]
+    console.log(`Total gas used: ${analysis.totalGas}`) // [!code focus]
+    console.log(`Hotspots: ${JSON.stringify(analysis.hotspots)}`) // [!code focus]
+    ```
+  </Tab>
+</Tabs>
 
-const node = createTevmNode({
-  profiler: {
-    enabled: true,
-    // Optional: Configure profiling options
-    includeOpcodes: true,
-    includePrecompiles: true,
-  },
-})
-```
+## Profiler Configuration
 
-## Collecting Performance Data
+<Cards>
+  <Card title="Opcode Tracking" icon="⚙️">
+    Track execution time and gas usage for individual EVM opcodes
+  </Card>
+  <Card title="Call Stack Analysis" icon="📞">
+    Profile the entire call tree to identify expensive contract interactions
+  </Card>
+  <Card title="Gas Analysis" icon="⛽">
+    Identify operations that consume the most gas
+  </Card>
+  <Card title="Memory Usage" icon="💾">
+    Track memory allocation and access patterns
+  </Card>
+  <Card title="Storage I/O" icon="💽">
+    Measure the impact of storage reads and writes
+  </Card>
+  <Card title="Precompile Usage" icon="🧩">
+    Profile built-in and custom precompiled contracts
+  </Card>
+</Cards>
 
-```ts
-const vm = await node.getVm()
-
-// Execute some transactions
-await vm.runTx({ /* ... */ })
-
-// Get performance logs
-const logs = vm.evm.getPerformanceLogs()
-
-// Clear logs when done
-vm.evm.clearPerformanceLogs()
-```
+<Callout type="tip" title="Configuration Options">
+  You can configure which operations to profile based on your specific needs. For general purposes, enabling opcode and call tracking provides a good balance between detail and performance.
+</Callout>
 
 ## Log Types
 
-The profiler collects various types of performance data:
+<Steps>
+  ### Performance Log Base Type
+  
+  All log entries share these properties:
+  
+  ```typescript showLineNumbers {1-6} filename="log-types.ts"
+  interface PerformanceLog {
+    type: 'opcode' | 'precompile' | 'call' | 'create'
+    startTime: number     // Performance.now() start timestamp
+    endTime: number       // Performance.now() end timestamp
+    executionTime: number // Duration in milliseconds
+    gasUsed?: bigint      // Gas consumed by this operation
+  }
+  ```
+  
+  ### Opcode-Specific Logs
+  
+  Detailed information about each opcode execution:
+  
+  ```typescript showLineNumbers {1-5} filename="opcode-logs.ts"
+  interface OpcodeLog extends PerformanceLog {
+    type: 'opcode'
+    opcode: string  // Opcode name (e.g., "ADD", "SSTORE")
+    pc: number      // Program counter position
+    stack?: bigint[] // Stack contents (if enabled)
+  }
+  ```
+  
+  ### Call and Contract Logs
+  
+  Information about contract interactions:
+  
+  ```typescript showLineNumbers {1-7} filename="call-logs.ts"
+  interface CallLog extends PerformanceLog {
+    type: 'call'
+    from: string    // Caller address
+    to: string      // Target address
+    value: bigint   // ETH value transferred
+    input: Uint8Array // Call data
+    depth: number   // Call stack depth
+  }
+  ```
+  
+  ### Precompile Logs
+  
+  Information about precompiled contract executions:
+  
+  ```typescript showLineNumbers {1-5} filename="precompile-logs.ts"
+  interface PrecompileLog extends PerformanceLog {
+    type: 'precompile'
+    address: string  // Precompile address
+    name: string     // Precompile name if known
+    input: Uint8Array // Input data
+  }
+  ```
+</Steps>
 
-```ts
-interface PerformanceLog {
-  type: 'opcode' | 'precompile' | 'call' | 'create'
-  startTime: number
-  endTime: number
-  executionTime: number
-  gasUsed?: bigint
-  // Additional data based on type
-}
+## Performance Analysis
 
-interface OpcodeLog extends PerformanceLog {
-  type: 'opcode'
-  opcode: string
-  pc: number
-}
-
-interface PrecompileLog extends PerformanceLog {
-  type: 'precompile'
-  address: string
-  name: string
-}
-```
-
-## Analyzing Performance
-
-### 1. Opcode Analysis
-
-```ts
-// Group by opcode
-const opcodeStats = logs
-  .filter(log => log.type === 'opcode')
-  .reduce((acc, log) => {
-    const key = log.opcode
-    acc[key] = acc[key] || { count: 0, totalTime: 0, totalGas: 0n }
-    acc[key].count++
-    acc[key].totalTime += log.executionTime
-    acc[key].totalGas += log.gasUsed ?? 0n
-    return acc
-  }, {})
-
-// Find expensive operations
-const expensiveOps = Object.entries(opcodeStats)
-  .sort(([, a], [, b]) => b.totalTime - a.totalTime)
-  .slice(0, 10)
-
-console.log('Most expensive operations:', expensiveOps)
-```
-
-### 2. Call Tree Analysis
-
-```ts
-// Analyze call depth and patterns
-const callTree = logs
-  .filter(log => log.type === 'call')
-  .map(log => ({
-    from: log.from,
-    to: log.to,
-    value: log.value,
-    executionTime: log.executionTime,
-    gasUsed: log.gasUsed,
-  }))
-
-console.log('Call tree:', callTree)
-```
-
-### 3. Gas Usage Patterns
-
-```ts
-// Track gas usage over time
-const gasTimeline = logs
-  .filter(log => log.gasUsed !== undefined)
-  .map(log => ({
-    timestamp: log.startTime,
-    gasUsed: log.gasUsed,
-    type: log.type,
-  }))
-
-// Calculate gas efficiency
-const gasEfficiency = gasTimeline.reduce((acc, log) => {
-  acc.totalGas += log.gasUsed ?? 0n
-  acc.totalTime += log.executionTime
-  return acc
-}, { totalGas: 0n, totalTime: 0 })
-```
+<Tabs>
+  <Tab label="Opcode Analysis">
+    <p>Identify which opcodes consume the most time and gas:</p>
+    
+    ```typescript showLineNumbers {2-12,15-21,23-24} filename="opcode-analysis.ts"
+    // Group logs by opcode
+    const opcodeStats = logs // [!code focus]
+      .filter(log => log.type === 'opcode') // [!code focus]
+      .reduce((acc, log) => { // [!code focus]
+        const key = log.opcode // [!code focus]
+        acc[key] = acc[key] || { count: 0, totalTime: 0, totalGas: 0n } // [!code focus]
+        acc[key].count++ // [!code focus]
+        acc[key].totalTime += log.executionTime // [!code focus]
+        acc[key].totalGas += log.gasUsed ?? 0n // [!code focus]
+        return acc // [!code focus]
+      }, {}) // [!code focus]
+    
+    // Find most expensive operations by time
+    const expensiveOpsByTime = Object.entries(opcodeStats) // [!code focus]
+      .sort(([, a], [, b]) => b.totalTime - a.totalTime) // [!code focus]
+      .slice(0, 5) // [!code focus]
+      .map(([opcode, stats]) => ({ // [!code focus]
+        opcode, // [!code focus]
+        count: stats.count, // [!code focus]
+        totalTimeMs: stats.totalTime.toFixed(2), // [!code focus]
+        avgTimeMs: (stats.totalTime / stats.count).toFixed(2) // [!code focus]
+      })) // [!code focus]
+    
+    console.log('Most time-consuming opcodes:') // [!code focus]
+    console.table(expensiveOpsByTime) // [!code focus]
+    ```
+    
+    <Callout type="info" title="Common Hotspots">
+      Storage operations (SLOAD, SSTORE), complex math (MULMOD, ADDMOD), and external calls (CALL, DELEGATECALL) are typically the most expensive operations.
+    </Callout>
+  </Tab>
+  
+  <Tab label="Call Tree Analysis">
+    <p>Analyze contract interactions and call patterns:</p>
+    
+    ```typescript showLineNumbers {2-9,12-15,18-23} filename="call-analysis.ts"
+    // Map call depth and patterns
+    const callTree = logs // [!code focus]
+      .filter(log => log.type === 'call') // [!code focus]
+      .map(log => ({ // [!code focus]
+        from: log.from, // [!code focus]
+        to: log.to, // [!code focus]
+        executionTime: log.executionTime, // [!code focus]
+        gasUsed: log.gasUsed, // [!code focus]
+        depth: log.depth // [!code focus]
+      }))
+    
+    // Group by contract address
+    const contractTimes = callTree.reduce((acc, call) => { // [!code focus]
+      acc[call.to] = (acc[call.to] || 0) + call.executionTime // [!code focus]
+      return acc // [!code focus]
+    }, {}) // [!code focus]
+    
+    // Find most time-consuming contracts
+    const slowestContracts = Object.entries(contractTimes) // [!code focus]
+      .sort(([, a], [, b]) => b - a) // [!code focus]
+      .slice(0, 3) // [!code focus]
+      .map(([address, time]) => // [!code focus]
+        `${address}: ${time.toFixed(2)}ms` // [!code focus]
+      ) // [!code focus]
+    ```
+  </Tab>
+  
+  <Tab label="Gas Analysis">
+    <p>Track gas consumption patterns:</p>
+    
+    ```typescript showLineNumbers {2-8,11-18} filename="gas-analysis.ts"
+    // Track gas usage over time
+    const gasTimeline = logs // [!code focus]
+      .filter(log => log.gasUsed !== undefined) // [!code focus]
+      .map(log => ({ // [!code focus]
+        timestamp: log.startTime, // [!code focus]
+        gasUsed: log.gasUsed, // [!code focus]
+        type: log.type // [!code focus]
+      })) // [!code focus]
+    
+    // Calculate gas efficiency by operation type
+    const gasEfficiencyByType = gasTimeline.reduce((acc, log) => { // [!code focus]
+      acc[log.type] = acc[log.type] || { totalGas: 0n, totalTime: 0, count: 0 } // [!code focus]
+      acc[log.type].totalGas += log.gasUsed // [!code focus]
+      acc[log.type].totalTime += log.executionTime // [!code focus]
+      acc[log.type].count++ // [!code focus]
+      return acc // [!code focus]
+    }, {}) // [!code focus]
+    
+    // Calculate gas per millisecond for each operation type
+    Object.entries(gasEfficiencyByType).forEach(([type, stats]) => {
+      const gasPerMs = Number(stats.totalGas) / stats.totalTime
+      console.log(`${type}: ${gasPerMs.toFixed(2)} gas/ms (${stats.count} operations)`)
+    })
+    ```
+  </Tab>
+</Tabs>
 
 ## Use Cases
 
-### 1. Contract Optimization
-
-```ts
-// Deploy and profile contract
-const vm = await node.getVm()
-await vm.runTx({ tx: deployTx })
-
-// Clear previous logs
-vm.evm.clearPerformanceLogs()
-
-// Profile specific function
-await vm.runTx({ tx: functionCallTx })
-const logs = vm.evm.getPerformanceLogs()
-
-// Analyze performance
-const functionProfile = analyzeLogs(logs)
-console.log('Function performance:', {
-  totalTime: functionProfile.executionTime,
-  gasUsed: functionProfile.gasUsed,
-  hotspots: functionProfile.hotspots,
-})
-```
-
-### 2. Comparative Analysis
-
-```ts
-async function compareImplementations(implementations: string[]) {
-  const results = []
+<Steps>
+  ### Smart Contract Optimization
+  
+  <Callout type="tip" title="Find Bottlenecks">
+    Profile your contract to identify performance bottlenecks and optimize the most expensive operations.
+  </Callout>
+  
+  ```typescript showLineNumbers {1-18} filename="contract-optimization.ts"
+  // Deploy the contract first
   const vm = await node.getVm()
-
-  for (const impl of implementations) {
-    vm.evm.clearPerformanceLogs()
-    await vm.runTx({ tx: createCallTx(impl) })
-    const logs = vm.evm.getPerformanceLogs()
-    results.push(analyzePerformance(logs))
+  const deployTx = createTx({ data: contractBytecode })
+  await vm.runTx({ tx: deployTx })
+  const contractAddress = deployTx.createdAddress
+  
+  // Clear logs before profiling the specific function
+  vm.evm.clearPerformanceLogs()
+  
+  // Call the function you want to optimize
+  const functionCallTx = createTx({
+    to: contractAddress,
+    data: encodeFunctionData({ 
+      abi,
+      functionName: 'expensiveFunction',
+      args: [param1, param2]
+    })
+  })
+  
+  await vm.runTx({ tx: functionCallTx })
+  const logs = vm.evm.getPerformanceLogs()
+  
+  // Analyze to find optimization opportunities
+  const hotspots = identifyHotspots(logs)
+  console.log('Optimization targets:', hotspots)
+  ```
+  
+  ### Compare Different Implementations
+  
+  <Callout type="tip" title="Benchmark Alternatives">
+    Compare different approaches to solve the same problem and choose the most efficient one.
+  </Callout>
+  
+  ```typescript showLineNumbers {1-21} filename="implementation-comparison.ts"
+  async function compareImplementations(implementations) {
+    const results = []
+    const vm = await node.getVm()
+  
+    for (const impl of implementations) {
+      // Clear previous logs
+      vm.evm.clearPerformanceLogs()
+      
+      // Deploy this implementation
+      const deployTx = createTx({ data: impl.bytecode })
+      await vm.runTx({ tx: deployTx })
+      
+      // Call with standard test case
+      const callTx = createTx({
+        to: deployTx.createdAddress,
+        data: impl.encodedFunctionCall
+      })
+      
+      await vm.runTx({ tx: callTx })
+      const logs = vm.evm.getPerformanceLogs()
+      
+      // Collect metrics
+      results.push(analyzePerformance(logs, impl.name))
+    }
+  
+    return compareResults(results)
   }
-
-  return compareResults(results)
-}
-```
-
-### 3. Gas Optimization
-
-```ts
-// Track gas usage by contract
-const contractGasUsage = logs
-  .filter(log => log.type === 'call')
-  .reduce((acc, log) => {
-    const contract = log.to
-    acc[contract] = acc[contract] || { calls: 0, totalGas: 0n }
-    acc[contract].calls++
-    acc[contract].totalGas += log.gasUsed ?? 0n
-    return acc
-  }, {})
-
-// Identify gas-intensive contracts
-const gasHotspots = Object.entries(contractGasUsage)
-  .sort(([, a], [, b]) => Number(b.totalGas - a.totalGas))
-```
+  
+  // Example output:
+  // Implementation A: 1.2ms, 45,000 gas
+  // Implementation B: 0.8ms, 32,000 gas (29% improvement)
+  ```
+  
+  ### Gas Optimization
+  
+  <Callout type="tip" title="Reduce Gas Costs">
+    Identify and optimize operations that consume the most gas to make your contracts cheaper to use.
+  </Callout>
+  
+  ```typescript showLineNumbers {1-17} filename="gas-optimization.ts"
+  // Find gas-intensive parts of your contract
+  const contractGasUsage = logs
+    .filter(log => log.type === 'opcode' && log.gasUsed)
+    .reduce((acc, log) => {
+      // Group by program counter to identify code locations
+      const pcKey = log.pc.toString().padStart(4, '0')
+      acc[pcKey] = acc[pcKey] || { 
+        opcode: log.opcode,
+        count: 0, 
+        totalGas: 0n 
+      }
+      
+      acc[pcKey].count++
+      acc[pcKey].totalGas += log.gasUsed
+      
+      return acc
+    }, {})
+  
+  // Identify gas hotspots
+  const gasHotspots = Object.entries(contractGasUsage)
+    .sort(([, a], [, b]) => Number(b.totalGas - a.totalGas))
+    .slice(0, 10)
+  ```
+</Steps>
 
 ## Best Practices
 
-1. **Targeted Profiling**:
-   ```ts
-   // Clear logs before specific operations
-   vm.evm.clearPerformanceLogs()
-   // Run the operation you want to profile
-   await vm.runTx({ /* ... */ })
-   // Analyze just that operation
-   const logs = vm.evm.getPerformanceLogs()
-   ```
+<Tabs>
+  <Tab label="Targeted Profiling">
+    <Callout type="tip" title="Profile Specific Operations">
+      For most accurate results, profile specific operations in isolation rather than entire sessions.
+    </Callout>
+    
+    ```typescript showLineNumbers {1-10} filename="targeted-profiling.ts"
+    // Clear logs before the specific operation you want to profile
+    vm.evm.clearPerformanceLogs()
+    
+    // Run only the operation you want to profile
+    await vm.runTx({ tx: specificOperationTx })
+    
+    // Analyze just that operation
+    const logs = vm.evm.getPerformanceLogs()
+    const analysis = analyzePerformance(logs)
+    
+    // Clear logs when done to prevent memory build-up
+    vm.evm.clearPerformanceLogs()
+    ```
+  </Tab>
+  
+  <Tab label="Memory Management">
+    <Callout type="warning" title="Handle Large Log Volumes">
+      Profiling generates a lot of data. Implement strategies to manage memory usage.
+    </Callout>
+    
+    ```typescript showLineNumbers {1-21} filename="memory-management.ts"
+    // For long-running sessions, clear logs periodically
+    async function profileWithMemoryManagement(operations) {
+      const results = []
+      
+      for (const op of operations) {
+        // Clear before each operation
+        vm.evm.clearPerformanceLogs()
+        
+        // Run the operation
+        await vm.runTx({ tx: op.tx })
+        
+        // Process logs immediately
+        const logs = vm.evm.getPerformanceLogs()
+        const summary = summarizeLogs(logs) // Extract just what you need
+        
+        // Save only the summary
+        results.push({
+          operation: op.name,
+          summary
+        })
+        
+        // Clear immediately to free memory
+        vm.evm.clearPerformanceLogs()
+      }
+      
+      return results
+    }
+    ```
+  </Tab>
+  
+  <Tab label="Comparative Analysis">
+    <Callout type="tip" title="Before/After Optimization">
+      Always measure performance before and after optimization to verify improvements.
+    </Callout>
+    
+    ```typescript showLineNumbers {1-14} filename="comparative-analysis.ts"
+    // Compare before and after optimization
+    async function measureOptimizationImpact(originalCode, optimizedCode) {
+      // Profile original implementation
+      vm.evm.clearPerformanceLogs()
+      await runImplementation(originalCode)
+      const beforeLogs = vm.evm.getPerformanceLogs()
+      const beforeMetrics = analyzePerformance(beforeLogs)
+      
+      // Profile optimized implementation
+      vm.evm.clearPerformanceLogs()
+      await runImplementation(optimizedCode)
+      const afterLogs = vm.evm.getPerformanceLogs()
+      const afterMetrics = analyzePerformance(afterLogs)
+      
+      // Calculate improvements
+      return {
+        timeImprovement: (1 - afterMetrics.totalTime / beforeMetrics.totalTime) * 100,
+        gasImprovement: (1 - Number(afterMetrics.totalGas) / Number(beforeMetrics.totalGas)) * 100,
+        details: compareMetrics(beforeMetrics, afterMetrics)
+      }
+    }
+    ```
+  </Tab>
+  
+  <Tab label="Production Use">
+    <Callout type="warning" title="Profiler Overhead">
+      The profiler itself adds some overhead. Consider these guidelines for production use.
+    </Callout>
+    
+    ```typescript showLineNumbers {1-15} filename="production-profiling.ts"
+    // For production environments
+    const node = createTevmNode({
+      profiler: {
+        // Only enable in specific environments
+        enabled: process.env.ENABLE_PROFILING === 'true',
+        
+        // Use selective profiling to reduce overhead
+        includeOpcodes: false,      // Disable full opcode tracking
+        samplingRate: 0.01,         // Only profile 1% of operations
+        includeMemory: false,       // Skip memory tracking
+        includeStorage: false,      // Skip storage tracking
+        
+        // Only track high-level calls for a system overview
+        includeHighLevelCalls: true
+      }
+    })
+    ```
+  </Tab>
+</Tabs>
 
-2. **Memory Management**:
-   - Clear logs periodically
-   - Profile specific operations rather than entire sessions
-   - Export and analyze large datasets externally
+## Related Resources
 
-3. **Comparative Analysis**:
-   ```ts
-   // Compare before/after optimization
-   const beforeLogs = await profileOperation(originalCode)
-   const afterLogs = await profileOperation(optimizedCode)
-   const improvement = compareProfiles(beforeLogs, afterLogs)
-   ```
-
-4. **Production Considerations**:
-   - Disable profiler in production
-   - Use sampling for long-running operations
-   - Consider the overhead of profiling itself
-
-## Related Topics
-- [VM & Submodules](../api/vm-and-submodules)
-- [Gas Estimation](../api/methods)
-- [Transaction Pool](./txpool)
+<div style={{ display: 'grid', gridTemplateColumns: 'repeat(auto-fill, minmax(250px, 1fr))', gap: '1rem', margin: '1.5rem 0' }}>
+  <Button href="../api/vm-and-submodules" style={{ height: 'auto', padding: '1rem', display: 'flex', flexDirection: 'column', alignItems: 'flex-start' }}>
+    <div style={{ fontWeight: 'var(--vocs-fontWeight_medium)', marginBottom: '0.5rem' }}>VM & Submodules</div>
+    <div style={{ fontSize: 'var(--vocs-fontSize_14)', textAlign: 'left' }}>Low-level access to the EVM core</div>
+  </Button>
+  
+  <Button href="../api/methods" style={{ height: 'auto', padding: '1rem', display: 'flex', flexDirection: 'column', alignItems: 'flex-start' }}>
+    <div style={{ fontWeight: 'var(--vocs-fontWeight_medium)', marginBottom: '0.5rem' }}>Gas Estimation</div>
+    <div style={{ fontSize: 'var(--vocs-fontSize_14)', textAlign: 'left' }}>Methods for estimating transaction gas costs</div>
+  </Button>
+  
+  <Button href="./txpool" style={{ height: 'auto', padding: '1rem', display: 'flex', flexDirection: 'column', alignItems: 'flex-start' }}>
+    <div style={{ fontWeight: 'var(--vocs-fontWeight_medium)', marginBottom: '0.5rem' }}>Transaction Pool</div>
+    <div style={{ fontSize: 'var(--vocs-fontSize_14)', textAlign: 'left' }}>Understanding transaction lifecycle and processing</div>
+  </Button>
+  
+  <Button href="https://docs.soliditylang.org/en/latest/internals/optimizer.html" variant="accent" style={{ height: 'auto', padding: '1rem', display: 'flex', flexDirection: 'column', alignItems: 'flex-start' }}>
+    <div style={{ fontWeight: 'var(--vocs-fontWeight_medium)', marginBottom: '0.5rem' }}>Solidity Optimizer</div>
+    <div style={{ fontSize: 'var(--vocs-fontSize_14)', textAlign: 'left' }}>Learn about Solidity's built-in optimizer techniques</div>
+  </Button>
+</div>
