--- a/docs/node/docs/pages/getting-started/overview.mdx
+++ b/docs/node/docs/pages/getting-started/overview.mdx
@@ -1,44 +1,107 @@
 ---
 title: Overview
 description: A JavaScript-compatible Ethereum Virtual Machine with forking capabilities
+authors:
+  - "[William Cory](https://x.com/fucory)"
+  - "[Tevm Team](https://github.com/evmts)"
 ---
 
-import { Callout } from 'vocs/components'
+import { Callout, Steps, Button } from 'vocs/components'
 
-# Overview
+# Tevm Node Overview
 
-Tevm Node is an Ethereum Node that runs in all JavaScript environments.
-It's like [hardhat](https://hardhat.org/) or [anvil](https://book.getfoundry.sh/anvil/), but provides these advantages:
+Tevm Node is a **full Ethereum execution environment** that runs natively in JavaScript. It provides the complete functionality of an Ethereum node without requiring any blockchain client installation.
 
-- Zero native dependencies (runs in browser and Node.js)
-- Connects directly to [`viem`](https://viem.sh/) or [`ethers`](https://docs.ethers.org/v6/)
-- Provides fine-grained control over the EVM execution environment for advanced use cases and speedy ux
-- Implement advanced feature like zero-spinner gas estimation, optimistic updates, and advanced transaction simulation
+:::tip[Ready to dive in?]
+If you already know how to use `viem` or `ethers`, you can start using Tevm Node right away with your existing knowledge!
+:::
 
-<Callout type="tip">
-If you know how to use `viem` or `ethers`, you already know how to use Tevm Node and can get started right away.
-</Callout>
+## What Makes Tevm Unique?
+
+Unlike traditional development environments like [Hardhat](https://hardhat.org/) or [Anvil](https://book.getfoundry.sh/anvil/), Tevm Node offers several distinct advantages:
+
+::::code-group
+```ts [Universal JS] twoslash
+// @noErrors
+// Runs in browsers, Node.js, Deno, Bun and beyond
+// Zero native dependencies
+import { createMemoryClient } from 'tevm'
+
+const client = createMemoryClient()
+//    ^?
+
+// Works even in serverless environments!
+export async function handler() {
+  await client.getBalance({ 
+    address: '0x...'
+  })
+}
+```
+
+```ts [Direct Integration] twoslash
+// @noErrors
+// Uses the libraries you already know and love
+import { createMemoryClient } from 'tevm'
+
+// For viem users
+import { parseEther } from 'viem'
+const viemClient = createMemoryClient()
+await viemClient.setBalance({
+  address: '0xA0Cf...251e',
+  value: parseEther('1000')
+})
+
+// For ethers users
+import { ethers } from 'ethers'
+const ethersProvider = viemClient.asEthersProvider()
+await ethersProvider.getBalance('0xA0Cf...251e')
+```
+
+```ts [EVM Control] twoslash
+// @noErrors
+// Complete access to the EVM execution environment
+import { createTevmNode } from 'tevm'
+
+const node = await createTevmNode()
+const vm = await node.getVm()
+
+// Listen to EVM execution steps (opcodes)
+vm.evm.events.on("step", (data, next) => {
+  console.log(
+    `PC: ${data.pc}`, // program counter
+    `Opcode: ${data.opcode.name}`, // executing opcode
+    `Stack: ${data.stack.slice(-3)}` // last 3 stack items
+  )
+  next?.()
+})
+```
+::::
+
+- **Fine-grained EVM Control** — Access the execution environment at any level of detail, from high-level transactions to individual EVM opcodes
+- **Enhanced User Experience** — Enable advanced features like instantaneous gas estimation, optimistic UI updates, and sophisticated transaction simulation
+- **Cross-Platform Compatibility** — The same code works everywhere JavaScript runs
 
 ## Quick Example
 
-The following code simple deploys, writes, and reads from a contract.
+Here's a complete example showing how to deploy, write to, and read from a smart contract with Tevm:
 
-- The API for interacting with Tevm is [viem](https://viem.sh)
-- TevmNode runs an ethereum node in memory rather than using json-rpc over http
-
-```ts
-import { createMemoryClient, PREFUNDED_ACCOUNTS } from 'tevm'
+```ts showLineNumbers {1,11-13,22} filename="simple-contract.ts"
+import { createMemoryClient, PREFUNDED_ACCOUNTS } from 'tevm' // [!code focus]
 import { SimpleContract } from 'tevm/contract'
 
+// Create an in-memory Ethereum client
 const client = createMemoryClient()
 
+// Create contract instance
 const contract = SimpleContract.withAddress(`0x${'40'.repeat(20)}`)
 
+// Deploy contract bytecode
 await client.setCode({
-  address: contract.address,
-  bytecode: contract.deployedBytecode,
-})
+  address: contract.address, // [!code focus]
+  bytecode: contract.deployedBytecode, // [!code focus]
+}) // [!code focus]
 
+// Write to contract
 await client.writeContract({
   account: PREFUNDED_ACCOUNTS[0],
   abi: contract.abi,
@@ -47,15 +110,113 @@ await client.writeContract({
   address: contract.address,
 })
 
-await client.tevmMine()
+await client.tevmMine() // [!code focus]
 
+// Read from contract
 const value = await client.readContract({
   abi: contract.abi,
   functionName: 'get',
   address: contract.address,
 })
 
-console.log(value)
+console.log(value) // 420n
 ```
 
-If you don't know how to use `viem` or `ethers`, don't worry, Tevm is a great way to learn both Ethereum and TypeScript.
+:::details[How it works]
+1. We create a `memoryClient` that runs an Ethereum node entirely in memory
+2. We define a contract and its address
+3. We deploy the contract using `setCode` (simpler than a full deployment transaction)
+4. We write to the contract using a familiar viem-style interface
+5. We mine the transaction to include it in a block
+6. We read the updated value from the contract
+:::
+
+### Key Points:
+
+- **Familiar Interface** — Tevm uses [viem](https://viem.sh) as its primary API, making it instantly familiar to viem users
+- **In-Memory Execution** — TevmNode runs the Ethereum environment directly in memory rather than using JSON-RPC over HTTP
+- **Full Control** — Mine blocks on demand, manipulate state, and more
+
+## Getting Started
+
+::::steps
+### Install Tevm
+
+First, install Tevm in your project:
+
+:::code-group
+```bash [npm]
+npm install tevm
+```
+
+```bash [pnpm]
+pnpm add tevm
+```
+
+```bash [yarn]
+yarn add tevm
+```
+
+```bash [bun]
+bun add tevm
+```
+:::
+
+### Choose Your Client
+
+Tevm offers different client types depending on your needs:
+
+```ts
+// In-memory client (fastest, fully isolated)
+import { createMemoryClient } from 'tevm'
+const memoryClient = createMemoryClient()
+
+// Fork client (use existing chain state)
+import { createMemoryClient, http } from 'tevm'
+import { mainnet } from 'tevm/chains'
+const forkClient = createMemoryClient({
+  fork: {
+    transport: http('https://eth-mainnet.g.alchemy.com/v2/YOUR_API_KEY'),
+    common: mainnet
+  }
+})
+```
+
+### Start Building
+
+You're now ready to build with Tevm!
+
+```ts
+// Set up a test account with ETH
+import { parseEther } from 'viem'
+const account = "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
+await client.setBalance({
+  address: account,
+  value: parseEther("100")
+})
+
+// Read account balance
+const balance = await client.getBalance({
+  address: account
+})
+console.log(`Balance: ${balance}`)
+```
+::::
+
+## Learning Path
+
+If you're new to Ethereum development, don't worry! Tevm serves as an excellent learning platform for both Ethereum and TypeScript:
+
+:::info
+- **Isolated Environment** — Experiment freely without worrying about network costs or confirmation times
+- **TypeScript Integration** — Get full type safety and autocomplete for Ethereum interactions
+- **Simple API Surface** — Focus on learning core concepts with a streamlined interface
+:::
+
+## Next Steps
+
+<div style={{ display: 'flex', gap: '1rem', marginTop: '1.5rem', flexWrap: 'wrap' }}>
+  <Button href="./viem" variant="accent">Viem Quickstart →</Button>
+  <Button href="./ethers">Ethers Quickstart →</Button>
+  <Button href="../introduction/what-is-tevm-node">What is Tevm Node? →</Button>
+</div>
