--- a/docs/node/docs/pages/index.mdx
+++ b/docs/node/docs/pages/index.mdx
@@ -2,19 +2,192 @@
 layout: landing
 ---
 
-import { HomePage } from 'vocs/components'
+import { HomePage, Card, Button } from 'vocs/components'
 
 <HomePage.Root>
   <HomePage.Logo />
   <HomePage.Tagline>Tevm Node</HomePage.Tagline>
   <HomePage.InstallPackage name="tevm" type="install" />
-  <HomePage.Description>An in-browser Ethereum node for JavaScript Applications</HomePage.Description>
+  <HomePage.Description>A full Ethereum node in JavaScript - browser, Node.js, or anywhere</HomePage.Description>
+  
+  <div className="code-snippet" style={{
+    maxWidth: '600px',
+    margin: '1.5rem auto',
+    backgroundColor: 'var(--vocs-color_background2)',
+    borderRadius: 'var(--vocs-borderRadius_4)',
+    padding: '1rem',
+    overflow: 'auto'
+  }}>
+    ```ts
+    import { createMemoryClient } from 'tevm'
+    
+    // Create a complete Ethereum environment in one line
+    const client = createMemoryClient()
+    
+    // Execute EVM transactions locally with type safety
+    const result = await client.call({
+      account: '0x123...',
+      to: '0x456...',
+      data: '0x...'
+    })
+    ```
+  </div>
+  
   <HomePage.Buttons>
     <HomePage.Button href="/getting-started/overview" variant="accent">Get started</HomePage.Button>
     <HomePage.Button href="/examples/viem">Viem Guide</HomePage.Button>
-    <HomePage.Button href="/reference">Package Reference</HomePage.Button>
+    <HomePage.Button href="/introduction/what-is-tevm-node">Learn More</HomePage.Button>
   </HomePage.Buttons>
-  <HomePage.Description>
-    Here's our [documentation as plain text](https://node.tevm.sh/llms-full.txt) for providing context to LLMs
-  </HomePage.Description>
+  
+  <div style={{ 
+    display: 'grid', 
+    gridTemplateColumns: 'repeat(auto-fill, minmax(280px, 1fr))', 
+    gap: '1.5rem', 
+    maxWidth: '1200px',
+    margin: '3rem auto 1.5rem'
+  }}>
+    <div style={{ 
+      border: '1px solid var(--vocs-color_border)', 
+      borderRadius: 'var(--vocs-borderRadius_4)', 
+      padding: '1.5rem',
+      backgroundColor: 'var(--vocs-color_background2)'
+    }}>
+      <h3 style={{ margin: '0 0 0.75rem 0' }}>JavaScript-Native EVM</h3>
+      <p style={{ margin: '0 0 1rem 0' }}>Run a complete Ethereum environment directly in browsers, Node.js, Deno, or serverless - with zero native dependencies. Perfect for development, testing, and production.</p>
+      <Button href="/introduction/why-run-ethereum-in-js" variant="text" size="small">Why JavaScript? →</Button>
+    </div>
+    
+    <div style={{ 
+      border: '1px solid var(--vocs-color_border)', 
+      borderRadius: 'var(--vocs-borderRadius_4)', 
+      padding: '1.5rem',
+      backgroundColor: 'var(--vocs-color_background2)'
+    }}>
+      <h3 style={{ margin: '0 0 0.75rem 0' }}>10-25x Faster Than Remote Calls</h3>
+      <p style={{ margin: '0 0 1rem 0' }}>Execute transactions locally without network roundtrips. Get instant gas estimates, simulate complex transactions, and build responsive dApps with local execution.</p>
+      <Button href="/introduction/why-run-ethereum-in-js#performance--efficiency" variant="text" size="small">Performance Benefits →</Button>
+    </div>
+    
+    <div style={{ 
+      border: '1px solid var(--vocs-color_border)', 
+      borderRadius: 'var(--vocs-borderRadius_4)', 
+      padding: '1.5rem',
+      backgroundColor: 'var(--vocs-color_background2)'
+    }}>
+      <h3 style={{ margin: '0 0 0.75rem 0' }}>Import Solidity Files Directly</h3>
+      <p style={{ margin: '0 0 1rem 0' }}>Use .sol files as native ES modules with full TypeScript type safety. Access NatSpec documentation and interact with contracts using familiar patterns.</p>
+      <Button href="https://tevm.sh/bundler/direct-solidity-imports" variant="text" size="small">Bundler Integration →</Button>
+    </div>
+    
+    <div style={{ 
+      border: '1px solid var(--vocs-color_border)', 
+      borderRadius: 'var(--vocs-borderRadius_4)', 
+      padding: '1.5rem',
+      backgroundColor: 'var(--vocs-color_background2)'
+    }}>
+      <h3 style={{ margin: '0 0 0.75rem 0' }}>Fork Any Chain in Your Browser</h3>
+      <p style={{ margin: '0 0 1rem 0' }}>Create instant local copies of Ethereum, Optimism, or any EVM chain - directly in your browser. Test against real contracts and state without external tools like Anvil or Hardhat.</p>
+      <Button href="/core/forking" variant="text" size="small">Forking Guide →</Button>
+    </div>
+    
+    <div style={{ 
+      border: '1px solid var(--vocs-color_border)', 
+      borderRadius: 'var(--vocs-borderRadius_4)', 
+      padding: '1.5rem',
+      backgroundColor: 'var(--vocs-color_background2)'
+    }}>
+      <h3 style={{ margin: '0 0 0.75rem 0' }}>EVM Execution Hooks</h3>
+      <p style={{ margin: '0 0 1rem 0' }}>Intercept and modify EVM execution at the opcode level. Build advanced tools like debuggers, tracers, or custom gas profilers with complete visibility into each execution step.</p>
+      <Button href="/api/evm-events" variant="text" size="small">EVM Hooks Guide →</Button>
+    </div>
+    
+    <div style={{ 
+      border: '1px solid var(--vocs-color_border)', 
+      borderRadius: 'var(--vocs-borderRadius_4)', 
+      padding: '1.5rem',
+      backgroundColor: 'var(--vocs-color_background2)'
+    }}>
+      <h3 style={{ margin: '0 0 0.75rem 0' }}>Works With Tools You Know</h3>
+      <p style={{ margin: '0 0 1rem 0' }}>Native integration with viem and full compatibility with ethers.js, web3.js, wagmi, and any EIP-1193 library. Your existing code just works.</p>
+      <Button href="/introduction/what-is-tevm-node#library-compatibility" variant="text" size="small">Library Support →</Button>
+    </div>
+  </div>
+  
+  <div style={{ 
+    maxWidth: '800px', 
+    margin: '3rem auto',
+    padding: '1.5rem',
+    backgroundColor: 'var(--vocs-color_background2)',
+    borderRadius: 'var(--vocs-borderRadius_4)',
+    border: '1px solid var(--vocs-color_border)'
+  }}>
+    <h2 style={{ textAlign: 'center', marginTop: 0 }}>What Developers Are Saying</h2>
+    
+    <div style={{ 
+      display: 'grid',
+      gridTemplateColumns: 'repeat(auto-fit, minmax(300px, 1fr))',
+      gap: '1.5rem'
+    }}>
+      <blockquote style={{ 
+        margin: 0,
+        fontSize: 'var(--vocs-fontSize_16)',
+        borderLeft: 'none',
+        padding: 0
+      }}>
+        "If you're building a blockchain application on the web, I'm almost certain there is a use case for Tevm. It might change everything, and at worse it would most likely improve your devX."
+        <div style={{ 
+          marginTop: '0.75rem', 
+          fontWeight: 'var(--vocs-fontWeight_medium)' 
+        }}>
+          polarzero
+          <a href="https://twitter.com/0xpolarzero" style={{ 
+            fontSize: 'var(--vocs-fontSize_14)',
+            color: 'var(--vocs-color_textAccent)',
+            marginLeft: '0.5rem'
+          }}>@0xpolarzero</a>
+        </div>
+      </blockquote>
+      
+      <blockquote style={{ 
+        margin: 0,
+        fontSize: 'var(--vocs-fontSize_16)',
+        borderLeft: 'none',
+        padding: 0
+      }}>
+        "Fully @tevmtools pilled now. The beauty and harmony of the dev tooling 😍."
+        <div style={{ 
+          marginTop: '0.75rem', 
+          fontWeight: 'var(--vocs-fontWeight_medium)' 
+        }}>
+          EulerLagrange.eth - ver/acc
+          <a href="https://twitter.com/Euler__Lagrange" style={{ 
+            fontSize: 'var(--vocs-fontSize_14)',
+            color: 'var(--vocs-color_textAccent)',
+            marginLeft: '0.5rem'
+          }}>@Euler__Lagrange</a>
+        </div>
+      </blockquote>
+    </div>
+    
+    <div style={{ textAlign: 'center', marginTop: '1.5rem' }}>
+      <Button href="/getting-started/testimonials" variant="outline">See More Testimonials</Button>
+    </div>
+  </div>
+  
+  <div style={{ 
+    margin: '2rem auto', 
+    maxWidth: '600px', 
+    textAlign: 'center' 
+  }}>
+    <h2>Ready to get started?</h2>
+    <div style={{ display: 'flex', gap: '1rem', justifyContent: 'center', flexWrap: 'wrap' }}>
+      <Button href="/getting-started/overview" variant="accent">Installation Guide</Button>
+      <Button href="/examples/viem">Viem Integration</Button>
+      <Button href="/examples/ethers">Ethers Integration</Button>
+    </div>
+  </div>
+  
+  <div style={{ marginTop: '3rem', fontSize: 'var(--vocs-fontSize_14)', opacity: 0.8 }}>
+    Here's our <a href="https://node.tevm.sh/llms-full.txt">documentation as plain text</a> for providing context to LLMs
+  </div>
 </HomePage.Root>
